# Sasiki

./: .env.example  .gitignore  AGENTS.md  AGENT_INDEX.md  E2E_TEST_REPORT.md  MEMORY.md  Memory.md  NEXT_STEP.md  NEXT_STEP.md.bkp  PROGRESS.md  PROJECT_LOGS.md  README-zh.md  README.md  WORKFLOW_IMPROVEMENT_PLAN.md  agent_view_snapshot.json  agent_view_snapshot_after_click.json  build_extension.ps1  build_extension.sh  implementation_plan.md  pyproject.toml  test_agent_loop.py  test_cdp.py  test_history_loop.py  test_live_extraction.py  test_replay_agent.py
.github/: copilot-instructions.md
.harness/: bootstrap.toml  code-hardgate.json
.plan/: 20260304_interrupt_flush.md  20260304_pi_agent_core_migration.md  20260304_prompt_reasoning_observability.md  20260304_watch_once_pr1_contract_foundation.md  20260304_watch_once_pr2_observe_baseline.md  20260304_watch_once_v0_design.md  20260304_watch_once_v0_engineering_handoff.md  20260304_watch_once_v0_prd.md  20260304_watch_once_v0_review.md  20260305_runtime_naming_realignment.md  20260305_runtime_sop_decoupling_refactor.md  20260305_watch_once_pr2_1_compact_multitab.md  20260305_watch_once_pr3_closed_loop_review.md  20260305_watch_once_pr3_phase2_semantic_layer.md  20260305_watch_once_pr3_phase2_semantic_layer_implementation.md  20260305_watch_once_pr3_phase3_consumption_wiring_plan.md  20260305_watch_once_pr3_semantic_compaction_consumption.md  20260306_collaboration_methodology_agents_governance.md  20260306_long_task_sop_high_level_logging_foundation.md  20260306_long_task_sop_hitl_requirement_v0.md  20260306_long_task_sop_hitl_runtime_loop.md  20260306_runtime_config_root_resolution.md  20260306_watch_once_pr3_phase3a_pinned_runid.md  20260308_sop_compact_behavior_semantics_split_v1.md  20260308_sop_compact_intent_abstraction_v0.md  20260309_compact_stage_hitl_inline_loop.md  20260309_sop_compact_v1_full_chain_shift.md  20260310_interactive_reasoning_sop_compact.md  20260310_sop_compact_question_first_clarify.md  20260312_replay_refinement_online_design.md  checklist_interrupt_flush.md  (+30 more)
(+539 files in other folders)
